# automated-trading-system

./: .env.example  Cargo.toml
src/: alpaca.rs  lib.rs  main.rs  strategy.rs
src/datastructures/: config.rs
src/strategies/: dip_buy_spy_calls.rs  mod.rs  moving_average_crossover.rs
