[package]
name = "automated-trading-system"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
dotenv = "0.15.0"
trading-client = { path = "../trading-client" }
